--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9d05c304",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "888420aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.loadtxt('feature_data.csv', delimiter=',')\n",
+    "y = np.loadtxt('class_data.csv', delimiter=',')"
+   ]
   }
  ],
  "metadata": {
