--- a/main.ipynb
+++ b/main.ipynb
@@ -2,23 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "9d05c304",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "888420aa",
+   "execution_count": 10,
+   "id": "f5952474",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = np.loadtxt('feature_data.csv', delimiter=',')\n",
-    "y = np.loadtxt('class_data.csv', delimiter=',')"
+    "y = np.loadtxt('class_data.csv', delimiter=',')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a9e375e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "...     X, y, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "da18c41a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6028708133971292\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "total = 0\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] == y_test[i]: total +=1 \n",
+    "        \n",
+    "print(\"Accuracy: {}\".format(total / len(y_pred)))"
    ]
   }
  ],
